<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="ru.imit.omsu.sweet.navigator.ui.home.HomeFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_app"
        android:name="ru.imit.omsu.sweet.navigator.ui.app.AppInfoFragment"
        android:label="@string/about_app"
        tools:layout="@layout/fragment_about_app" />

    <fragment
        android:id="@+id/nav_exit"
        android:name="ru.imit.omsu.sweet.navigator.ui.exit.ExitFragment"
        android:label="@string/exit"
        tools:layout="@layout/fragment_exit" />

</navigation>