<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/second">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">
    <ImageView
        android:id="@+id/cake"
        android:layout_width="match_parent"
        android:layout_height="@dimen/image_margin"
        android:background="@color/colorWhite"
        android:contentDescription="@string/picture_of_cake" />

    <TextView
        android:id="@+id/des_cake"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        style="@style/NameObject" />

    <TextView android:id="@+id/selection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:textSize="@dimen/text_size"
        tools:ignore="SpUsage" />

    <CheckBox
        android:id="@+id/like"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/like"
        android:textSize="@dimen/text_size"
        tools:ignore="SpUsage" />

    <EditText
        android:id="@+id/msg_comment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/your_comment" />
    <Button
        android:id="@+id/sent_comment"
        android:layout_width="match_parent"
        style="@style/MyButton1"
        android:onClick="onClick"
        android:text="@string/send" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>