<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/frag_add_sweet">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">
    <EditText
        android:id="@+id/name_sweet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/your_name_sweet"
        tools:ignore="MissingConstraints" />
    <EditText
        android:id="@+id/dsc_sweet"
        android:layout_marginTop="@dimen/margin_top_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/your_description_sweet"
        tools:ignore="MissingConstraints" />
    <Button
        android:id="@+id/add_sweet"
        android:layout_width="match_parent"
        style="@style/MyButton1"
        android:onClick="onClick"
        android:text="@string/add"
        tools:ignore="MissingConstraints" />
</LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>