<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/frag_home">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/content_margin" />

        <ImageView
            android:id="@+id/honey"
            android:layout_width="match_parent"
            android:layout_height="@dimen/image_margin"
            android:background="@color/colorWhite"
            android:src="@drawable/honey"
            android:contentDescription="@string/picture_of_cake_honey" />
        <TextView
            android:id="@+id/des_honey"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/NameObject"
            android:text="@string/cake_honey"/>
        <TextView
            android:id="@+id/honey_like"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/NameObject" />
        <TextView
            android:id="@+id/honey_comment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/NameObject" />
        <Button
            android:id="@+id/honey_details"
            android:layout_width="match_parent"
            style="@style/MyButton"
            android:onClick="onClick"
            android:text="@string/details" />
        <ImageView
            android:id="@+id/zebra"
            android:layout_width="match_parent"
            android:layout_height="@dimen/image_margin"
            android:background="@color/colorWhite"
            android:src="@drawable/zebra"
            android:contentDescription="@string/cake_zebra" />
        <TextView
            android:id="@+id/des_zebra"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/NameObject"
            android:text="@string/cake_zebra"/>
        <TextView
            android:id="@+id/zebra_like"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/NameObject" />
        <TextView
            android:id="@+id/zebra_comment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/NameObject" />
        <Button
            android:id="@+id/zebra_details"
            android:layout_width="match_parent"
            android:onClick="onClick"
            style="@style/MyButton"
            android:text="@string/details" />
        <ImageView
            android:id="@+id/peaches"
            android:layout_width="match_parent"
            android:layout_height="@dimen/image_margin"
            android:background="@color/colorWhite"
            android:src="@drawable/peaches"
            android:contentDescription="@string/picture_of_cake_zebra" />
        <TextView
            android:id="@+id/des_peaches"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/NameObject"
            android:text="@string/cake_peaches"/>
        <TextView
            android:id="@+id/peaches_like"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/NameObject"/>
        <TextView
            android:id="@+id/peaches_comment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/NameObject"/>
        <Button
            android:id="@+id/peaches_details"
            android:layout_width="match_parent"
            style="@style/MyButton"
            android:onClick="onClick"
            android:text="@string/details" />
        <ImageView
            android:id="@+id/example"
            android:layout_width="match_parent"
            android:layout_height="@dimen/image_margin"
            android:src="@drawable/example"
                    android:visibility="gone"
            android:background="@color/colorWhite"
            android:contentDescription="@string/picture_of_new_sweet" />
        <TextView
            android:id="@+id/name_example"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            style="@style/NameObject"/>
        <TextView
            android:id="@+id/dsc_example"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            style="@style/NameObject"/>
    </LinearLayout>
    <!--            android:visibility="gone"-->
<!--    android:visibility="gone"-->
</androidx.constraintlayout.widget.ConstraintLayout>