<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="false"
        tools:ignore="MissingConstraints">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/honey"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="#00000000"
                android:src="@drawable/honey" />
            <TextView
                android:id="@+id/des_honey"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@color/colorPrimaryDark"
                android:text="@string/cake_honey"/>
            <Button
                android:id="@+id/honey_details"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:onClick="onClick"
                android:text="Details" />
            <ImageView
                android:id="@+id/zebra"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="#00000000"
                android:src="@drawable/zebra"
                android:contentDescription="@string/cake_zebra" />
            <TextView
                android:id="@+id/des_zebra"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@color/colorPrimaryDark"
                android:text="@string/cake_zebra"/>
            <Button
                android:id="@+id/zebra_details"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:onClick="onClick"
                android:text="Details" />
            <ImageView
                    android:id="@+id/peaches"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:background="#00000000"
                    android:src="@drawable/peaches"/>
            <TextView
                android:id="@+id/des_peaches"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@color/colorPrimaryDark"
                android:text="@string/cake_peaches"/>
            <Button
                android:id="@+id/peaches_details"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:onClick="onClick"
                android:text="Details" />
            <Button
                android:id="@+id/invite_friends"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_gravity="bottom"
                android:onClick="onClick"
                android:text="Invite friend" />

        </LinearLayout>
    </ScrollView>

<!--    <TextView-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="@string/sweet_sweet"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintLeft_toLeftOf="parent"-->
<!--        app:layout_constraintRight_toRightOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent" />-->





</androidx.constraintlayout.widget.ConstraintLayout>